tests/baselines/reference/stringLiteralCheckedInIf02.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralCheckedInIf02.ts(6,12): error TS2365: Operator '===' cannot be applied to types '("a" | "b")[] | "a" | "b"' and 'string'.
tests/cases/conformance/types/stringLiteral/stringLiteralCheckedInIf02.ts(6,25): error TS2365: Operator '===' cannot be applied to types '("a" | "b")[] | "a" | "b"' and 'string'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralCheckedInIf02.ts (2 errors) ====
    
    type S = "a" | "b";
    type T = S[] | S;
    
    function isS(t: T): t is S {
        return t === "a" || t === "b";
               ~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '("a" | "b")[] | "a" | "b"' and 'string'.
                            ~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '("a" | "b")[] | "a" | "b"' and 'string'.
    }
    
    function f(foo: T) {
        if (isS(foo)) {
            return foo;
        }
        else { 
            return foo[0];
        }
    
        throw new Error("Unreachable code hit.");
    }